Fix layout, fonts, spacing in CSS, beautify

--- a/style.css
+++ b/style.css
@@ -2,29 +2,29 @@ body {
     display: flex;
     flex-direction: column;
     font-family: "Roboto", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
 }
 
 .header {
-    background-color: #1F2937;
     display: flex;
+    background-color: #1F2937;
     justify-content: space-between;
     align-items: center;
-    
+    padding: 5px 180px;
 }
 
 .logo {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 700;
-    margin-left: 100px;
-
 }
+
 .right-links {
     display: flex;
-    justify-content: space-evenly;
-    gap: 8px;
+    justify-content: space-between;
+    gap: 16px;
     padding: 16px;
-    margin-right: 100px;
 }
 
 a {
@@ -34,22 +34,15 @@ a {
 
 .hero {
     display: flex;
-    padding: 24px;
+    padding: 96px 180px;
     justify-content: space-between;
     align-items: center;
     background-color: #1F2937;
+    gap: 56px;
 }
 
-.hero-left {
-    display: flex;
-    flex-direction: column;
-    margin-left: 100px;
-    max-width: 500px;
-    gap: 10px
-}
-
-.hero-right {
-    margin: 100px;
+.hero img {
+    width: 500px;
 }
 
 .title {
@@ -61,22 +54,27 @@ a {
 .text {
     font-size: 18px;
     color: #E5E7EB;
+    margin-bottom: 8px;
 }
 
 button {
-    max-width: fit-content;
     background-color: #3882F6;
     color: #F9FAF8;
-    padding: 5px 20px;
+    padding: 8px 24px;
     border-radius: 5px;
+    font-weight: 700;
 }
 
+.hero button {
+    border-color: #3882F6;
+}
 .banner{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    gap: 16px;
+    gap: 48px;
+    padding: 48px 180px;
 }
 
 .info {
@@ -87,26 +85,39 @@ button {
 
 .photos {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    gap:8px;
+    margin-bottom: 5%;
+    gap: 32px;
 }
 
-img {
+.card {
+    max-width: 180px;
+    gap: 8px;
+}
+
+.card img {
     display: block;
-    border-radius: 5px;
+    border-radius: 8px;
     border:  2px solid #3882F6;
-    height: 200px;
-    width: 200px
+    height: 180px;
+    width: 180px;
+    margin-bottom: 5px;
+}
+.caption {
+    text-align: center;
+    color: #5e5e61;
+}
+.container-grey {
+    display: flex;
+    background-color:#E5E7EB;
+    padding: 96px 280px;
 }
 
 .testimonial {
     display: flex;
     flex-direction: column;
-    
     align-items: center;
-    padding: 24px 48px;
-    background-color: #E5E7EB;
 }
 
 .quote {
@@ -115,10 +126,11 @@ img {
     font-style: italic;
     font-weight: lighter;
     color: #1F2937;
+    margin-bottom: 10px;
 }
 
 .attribution {
-    text-align:right;
+    align-self: flex-end;
     font-size: 24px;
     font-weight: 900;
     color: #1F2937;
@@ -126,28 +138,32 @@ img {
 
 .call2action {
     display: flex;
-    padding: 24px 36px;
     justify-content: center;
     align-items: center;
+    padding: 48px 180px;
 }
 
 .signup {
     display: flex;
+    flex: 1;
     background-color: #3882F6;
     color: #F9FAF8;
     border-radius: 5px;
-    flex-direction: column;
-    justify-content: space-between;
+    padding: 36px 128px;
     align-items: center;
+    justify-content: space-between;
 }
 
 .signup button {
+    align-self: flex-end;
     border-color: #F9FAF8;
+    font-weight: bold;
+    color: #F9FAF8;
 }
 
 .footer {
-    display: flex;
-    justify-content: center;
+    padding: 32px;
+    text-align: center;
     align-items: center;
     background-color: #1F2937;
     color: #E5E7EB;
